tests/errors/semantic/blocking/APPEND_LIST_INCOMPATIBLE_TYPES_1.py
a = [1,2,3]
a.append([4])